fixed vertical align and place order id to the right

--- a/src/app/trip/components/right-bar/right-bar.component.scss
+++ b/src/app/trip/components/right-bar/right-bar.component.scss
@@ -135,6 +135,10 @@
 
     .name {
       padding-top: 4px;
+
+      &.order-id {
+        padding: 0;
+      }
     }
 
     .label {
